<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/sp_pop_bg">

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/btn_create_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:background="@drawable/sp_pop_item_top_bg"
            android:drawableStart="@drawable/ic_pop_group"
            android:drawablePadding="@dimen/sb_size_10"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:text="@string/text_create_group"
            android:textColor="#353535"
            android:textSize="@dimen/sb_size_16" />


        <TextView
            android:id="@+id/btn_add_friends"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:background="@drawable/sp_pop_item_normal_bg"
            android:drawableStart="@drawable/ic_pop_add"
            android:drawablePadding="@dimen/sb_size_10"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:text="@string/text_add_friend"
            android:textColor="#353535"
            android:textSize="@dimen/sb_size_16" />

        <TextView
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sb_size_56"
            android:background="@drawable/sp_pop_item_bottom_bg"
            android:drawableStart="@drawable/ic_pop_scan"
            android:drawablePadding="@dimen/sb_size_10"
            android:gravity="center_vertical"
            android:paddingStart="24dp"
            android:text="@string/text_scan_qrcode"
            android:textColor="#353535"
            android:textSize="@dimen/sb_size_16" />

    </LinearLayout>


</FrameLayout>