<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.juggle.chat.component.HeadComponent
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:head_title_text="@string/text_profile"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemPortrait"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sb_size_88"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="@dimen/sb_size_16"
        android:paddingRight="@dimen/sb_size_16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_portrait"
            android:textAppearance="@style/SendbirdSubtitle2OnLight01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/ivProfileView"
            android:layout_width="@dimen/sb_size_64"
            android:layout_height="@dimen/sb_size_64"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sb_size_12"
            android:layout_marginBottom="@dimen/sb_size_12"
            android:layout_marginEnd="@dimen/sb_size_12"
            android:contentDescription="@string/text_portrait"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivPortraitRight"
            />
        <ImageView
            android:id="@+id/ivPortraitRight"
            android:layout_width="@dimen/sb_size_24"
            android:layout_height="@dimen/sb_size_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/icon_chevron_right"
            android:importantForAccessibility="no"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/sb_size_1"
        android:background="@drawable/sb_line_divider_light"
        android:layout_marginStart="@dimen/sb_size_16"
        android:layout_marginEnd="@dimen/sb_size_16"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemNickname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sb_size_56"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="@dimen/sb_size_16"
        android:paddingRight="@dimen/sb_size_16">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hint_nickname"
            android:textAppearance="@style/SendbirdSubtitle2OnLight01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tvNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SendbirdSubtitle1OnLight03"
            android:layout_marginEnd="@dimen/sb_size_6"
            app:layout_constraintEnd_toStartOf="@id/ivNicknameRight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivNicknameRight"
            android:layout_width="@dimen/sb_size_24"
            android:layout_height="@dimen/sb_size_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/icon_chevron_right"
            android:importantForAccessibility="no"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>